# Squaredle-Solver

./: .gitignore  Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  FutureGoals.md  InputOutputProcessor.cpp  InputOutputProcessor.hpp  InputProcessor.cpp  InputProcessor.hpp  LICENSE  Parameters.hpp  README.md  ROADMAP.md  Trie.cpp  Trie.hpp  TrieNode.hpp  main.cpp  makefile
Backend/: Algorithm.cpp  Algorithm.hpp  InputOutputProcessor.cpp  InputOutputProcessor.hpp  Parameters.hpp  Trie.cpp  Trie.hpp  TrieNode.hpp  main.cpp
Frontend/Squaredle-Solver/: .gitignore  CMakeLists.txt  Main.qml  Resources.qrc  gridmodel.cpp  gridmodel.h  main.cpp  mainmodule.cpp  mainmodule.h  resultsmodel.cpp  resultsmodel.h
Live/: appSquaredle-Solver.js
Source/Backend/: Algorithm.cpp  Algorithm.hpp  InputOutputProcessor.cpp  InputOutputProcessor.hpp  Trie.cpp  Trie.hpp  TrieNode.hpp  WordProcessing.cpp  WordProcessing.hpp  main.cpp  words.txt
Source/Backend/Algorithm/: Algorithm.cpp  Algorithm.hpp
Source/Backend/Trie/: Trie.cpp  Trie.hpp  TrieNode.cpp  TrieNode.hpp
Source/Backend/WordProcessing/: WordProcessing.cpp
Source/Frontend/: GetPuzzle.js  Main.qml  gridmodel.cpp  mainmodule.cpp  mainmodule.h  resultsmodel.cpp  resultsmodel.h  words.txt
Source/Frontend/Components/: GameGrid.qml  HighlightTimer.qml  Results.qml
Source/Frontend/Components/Popups/: ErrorPopup.qml  GetPuzzlePopup.qml  Popups.qml
Source/Frontend/GridModel/: gridmodel.cpp  gridmodel.h
Source/Frontend/MainModule/: mainmodule.cpp  mainmodule.h
Source/Frontend/ResultsModel/: resultsmodel.cpp  resultsmodel.h
Tests/: Main.cpp
Tests/Algorithm/: Algorithm.cpp  Algorithm.hpp
Tests/Frontend/: FrontendChecks.md
Tests/Trie/: Trie.cpp  Trie.hpp
live/: appSquaredle-Solver.js  index.html
output/: run
